# svelte-crow-fullstack

./: README.md  package-lock.json
server/: .env  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
server/src/: main.cpp
server/src/db/: load_env.cpp  load_env.h  queries.cpp  queries.h
server/src/static/: index.html
server/src/template/: post_edit.html  posts.html
website/: package-lock.json  package.json  vite.config.js
